--- a/CRUD-CA/static/css/index.css
+++ b/CRUD-CA/static/css/index.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:500');
 
+body{
+    background-color:#262428;
+}
 * {
     box-sizing: border-box;
     margin: 0;
@@ -12,6 +15,8 @@ li, a, button {
     font-size: 16px;
     color: #edf0f1;
     text-decoration: none;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
 }
 
 header{
