--- a/CRUD-CA/templates/login.html
+++ b/CRUD-CA/templates/login.html
@@ -1,18 +1,20 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="../static/css/login.css">
+    </head>
+    <body>
+
+    </body>
     <div class="login">
             
         <h1 class="title">Login</h1> 
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>   
         <div class="login-inputs">
              
             <input type="text" placeholder="Username"/>
             <br></br>
             <br></br>
             <input type="password" placeholder="Password"/>
-            <br></br>
             <br></br>
             <button class="btn">Let's go!</button>
         </div>
