--- a/CRUD-CA/templates/index.html
+++ b/CRUD-CA/templates/index.html
@@ -17,5 +17,9 @@
             </ul>
         </nav>
     </header>
-    <footer class="footer">Nicola Anghileri</footer>
+    Welcome!
+    this page has been made to visualize the air quality inside
+    the CPT Trevano on the fourth floor (IT Section).
+
+    <footer class="footer">© Nicola Anghileri, Erik Pelloni, Lorenzo Spadea</footer>
 </html>
