--- a/CRUD-CA/templates/add_user.html
+++ b/CRUD-CA/templates/add_user.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
-<head>
-    <link rel="stylesheet" href="../static/css/add_user.css/">
-</head>
-<body>
-
-</body>
-<header>
-    <div class="add_user">
-        <h1 class="title">Add an administrator</h1> 
-        <div class="add-user-inputs">
-            <input type="text" placeholder="Username"/>
-            <br></br>
-            <br></br>
-            <input type="password" placeholder="Password"/>
-            <br></br>
-            <br></br>
-            <button class="btn">Go!</button>
+<html>
+    <head>
+        <link rel="stylesheet" href="../static/css/login.css">
+    </head>
+    <body>
+        {% extends "layout.html" %}
+        {% block content %}
+        <div class="add_user">
+            <h1 class="title">Add an administrator</h1> 
+            <div class="add-user-inputs">
+                <input type="text" placeholder="Username"/>
+                <br></br>
+                <br></br>
+                <input type="password" placeholder="Password"/>
+                <br></br>
+                <br></br>
+                <button class="btn">Go!</button>
+            </div>
         </div>
-    </div>
-</header>
+        {% endblock %}
+    </body>
+    
+</html>
