--- a/CRUD-CA/static/css/index.css
+++ b/CRUD-CA/static/css/index.css
@@ -9,7 +9,7 @@ body{
     padding: 0;
 }
 
-li, a, button {
+li, a, button, p{
     
     font-weight: 500;
     font-size: 16px;
@@ -68,3 +68,13 @@ footer{
     flex: 1;
 }
 
+h1{
+    color: white;
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+     'Lucida Sans', Arial, sans-serif;
+}
+
+p{
+    text-align: center;
+}
