--- a/CRUD-CA/static/css/login.css
+++ b/CRUD-CA/static/css/login.css
@@ -20,16 +20,18 @@ div {
 input{
     height: 20px;
     border: none ;
-    border-radius:2px;
+    border-radius:15px;
     color: #F2AA4CFF;
     background-color: #262428;
     border-bottom: 1px solid;
+    padding: 20px;
 }
 
 .btn {
     width: 50%;
     height: 50px;
     margin-top: 20px;
+    border-radius:30px;
     color: #F2AA4CFF;
     background-color: #262428;
     border: none;
@@ -45,10 +47,14 @@ input{
     margin-top: 2px,
 }
 
-
-
 input:focus{
     outline: none !important;
     border-color: #719ECE;
     box-shadow: 0 0 5px #719ECE;
+}
+
+h1{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
+    padding-bottom: 20px;
 }
