--- a/CRUD-CA/templates/fishino.html
+++ b/CRUD-CA/templates/fishino.html
@@ -7,7 +7,7 @@
         {% extends "layout.html" %}
         {% block content %}
         <h1 style="color:white;">ACTIVE DEVICES</h1>
-        {% for item in out %}
+        {% for item in fishino %}
             <div>
                 <!--<button style="height:40px; width:40px;">{{item.position}}</button>-->
                 <p>{{item.position}}</p>
