--- a/CRUD-CA/templates/login.html
+++ b/CRUD-CA/templates/login.html
@@ -7,13 +7,13 @@
         {% extends "layout.html" %}
         {% block content %}
         <div class="login">
-            <form action="" method="post">
+            <form  method="post">
                 <h1 class="title">Login</h1>
                 <div class="login-inputs">
-                    <input type="text" placeholder="Username"/>
+                    <input type="text" placeholder="Username" name="username"/>
                     <br>
                     <br>
-                    <input type="password" placeholder="Password"/>
+                    <input type="password" placeholder="Password" name="pwd"/>
                     <button class="btn" type="submit">Let's go!</button>
                 </div>
             </form>
