--- a/CRUD-CA/templates/pages/navbar.html
+++ b/CRUD-CA/templates/pages/navbar.html
@@ -5,7 +5,7 @@
         <h1 class="logo">Controllo Ambientale</h1>
         <nav>
             <ul class = "nav_links">
-                {% for item in nav.navbar %}
+                {% for item in navbar %}
                 <li class="{{ 'active' if item.is_active else '' }}">
                     <a href="{{ item.url }}">{{ item.label }}</a>
                 </li>
