--- a/CRUD-CA/templates/fishino.html
+++ b/CRUD-CA/templates/fishino.html
@@ -3,18 +3,16 @@
     <head>
         <link rel="stylesheet" href="../static/css/login.css">
         <link rel="stylesheet" href="../static/css/fishino_list.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         {% extends "layout.html" %}
         {% block content %}
         <h1>ACTIVE DEVICES</h1>
-        <div class="list">
-        <form action="http://localhost:5000/fishino/">
-        {% for item in fishino %}
-            <button type="submit" name="{{item.name}}">{{item.name}}</button>
-        {% endfor %}
-        </form>
-    </div>
+            {% for item in fishino %}
+                <div class="center" ><a href="fishino/{{item.name}}"><button>{{item.name}} -> {{item.position}}</button></a><a href="fishino/delete/{{item.name}}">
+                <button class="del-btn"><i class="fa fa-trash-o" style="font-size:36px"></i></button></a></div>
+            {% endfor %}
         {% endblock %}
     </body>
 </html>
