--- a/CRUD-CA/templates/graphics.html
+++ b/CRUD-CA/templates/graphics.html
@@ -8,16 +8,18 @@
     <body>
         {% extends "layout.html" %}
         {% block content %}
-            <form onchange="">
-                <input type="radio" id="today" name="time" value="today" checked>
-                <label for="today">Today</label><br>
-                <input type="radio" id="week" name="time" value="week">
-                <label for="week">Last week</label><br>
-                <input type="radio" id="month" name="time" value="month">
-                <label for="month">Last month</label>
-                <input type="radio" id="year" name="time" value="year">
-                <label for="year">Last year</label>
-            </form>
+        <form action="" method="POST">
+            <h2>Choose a time range:</h2>
+            <select name="time" id="times">
+                <option value="today">Today</option>
+                <option value="week">Last week</option>
+                <option value="month">Last month</option>
+                <option value="year">Last year</option>
+            </select>
+
+            <input type="submit" value="Submit">
+        </form>
+
             <div class="container">
                   <embed type="image/svg+xml" src={{graph_data_1|safe}} style='max-width:1000px'/>
                   <embed type="image/svg+xml" src={{graph_data_2|safe}} style='max-width:1000px'/>
