--- a/CRUD-CA/templates/index.html
+++ b/CRUD-CA/templates/index.html
@@ -6,9 +6,29 @@
         {% extends "layout.html" %}
         {% block content %}
         <h1>Welcome!</h1>
-        <p>
-            This page has been made to visualize the air quality inside
+        <br>
+        <p>This page has been made to visualize the air quality inside
             the CPT Trevano on the fourth floor (IT Section).</p>
+
+        <h2>Average Status:</h2>
+        <div class="container">
+            <div class="info-div"> <p>Co2</p>
+                <div class="{{ co2 }}">&nbsp;</div>
+            </div>
+            <div class="info-div"> <p>Brightness</p>
+                <div class="{{ bright }}">&nbsp;</div>
+            </div>
+            <div class="info-div"> <p>Temperature</p>
+                <div class="{{ temp }}">&nbsp;</div>
+            </div>
+            <div class="info-div"> <p>Noise</p>
+                <div class="{{ noise }}">&nbsp;</div>
+            </div>
+            <div class="info-div"> <p>Humidity</p>
+                <div class="{{ hum }}">&nbsp;</div>
+            </div>
+        </div>
+
         {% endblock %}
     </body>
 </html>
