--- a/CRUD-CA/templates/login.html
+++ b/CRUD-CA/templates/login.html
@@ -14,6 +14,7 @@
                     <br>
                     <br>
                     <input type="password" placeholder="Password" name="pwd"/>
+                    <h1>{{ msg }}</h1>
                     <button class="btn" type="submit">Let's go!</button>
                 </div>
             </form>
