--- a/CRUD-CA/static/css/index.css
+++ b/CRUD-CA/static/css/index.css
@@ -10,6 +10,7 @@ body{
 }
 
 li, a, button, p{
+
     font-weight: 500;
     font-size: 16px;
     color: #edf0f1;
@@ -67,13 +68,62 @@ footer{
     flex: 1;
 }
 
-h1{
+h1, h2{
     color: white;
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
      'Lucida Sans', Arial, sans-serif;
 }
 
+h2{
+    margin-top:50px;
+}
+
+
 p{
     text-align: center;
+    padding: 20px;
 }
+
+
+
+.info-div{
+    background-color: #A934BD;
+    box-sizing: border-box;
+    width: 200px;
+    border-radius:10px;
+    padding:10px;
+    margin-right:10px;
+    display:flex;
+}
+.container{
+    align-items:center;
+    display: flex;
+    justify-content: center;
+    margin-top:50px;
+}
+
+.status-div-allert{
+    width: 50px;
+    background-color:#e62e00;
+    border-radius:5px;
+    text-align:center;
+    margin-left:auto;
+}
+
+
+.status-div-normal{
+    width: 50px;
+    background-color:#2eb82e;
+    border-radius:5px;
+    text-align:center;
+    margin-left:auto;
+}
+
+
+
+
+
+
+
+
